# jef-c

./: .gitignore  CMakeLists.txt  README.md  jef.c  jef.h
datatypes/: CMakeLists.txt  datatype.c  datatypes.h
log/: CMakeLists.txt  log.c  log.h
